Fixed paragraphs with inline code alignment.

--- a/content/themes/taller/assets/sass/partials/components/_post.sass
+++ b/content/themes/taller/assets/sass/partials/components/_post.sass
@@ -143,6 +143,9 @@ header.article-head
     margin-left: auto
     margin-right: auto
 
+  p.has-code
+    text-align: left
+
   p.has-span
     position: relative
     margin-top: 0
